Fix: images and text not centered

--- a/components/FeatureSummaryList/Item/index.module.scss
+++ b/components/FeatureSummaryList/Item/index.module.scss
@@ -62,8 +62,12 @@
     }
 
     .link {
-      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
+    a.link {
       &:hover {
         .title {
           text-decoration: underline;
